--- a/sectionpages/sectionpages.css
+++ b/sectionpages/sectionpages.css
@@ -34,20 +34,21 @@
 
 @media only screen and (max-device-width: 600px) {
 
-    .section-header {
+     .section-header {
         margin-top: 20px;
         margin-left: 7.5vw;
         margin-bottom: 10px;
         font-size: 5em;
         text-align:left;
+        width: auto;
 
-    }
+    } 
 
     .section-header-horizontal-line {
         width: 85vw;
         margin-left: 7.5vw;
-        /* height: 2px;
-        background-color: black; */
+        height: 2px;
+        background-color: black;
     }
 
     .bottom-container {
