--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   padding: 0px;
+  width: 100vw;
 }
 
 h1 {
